protobuf/protoeditor-core/testData/lang/annotation/Proto2Errors.proto.testdata
syntax = "proto2";

package foo.bar;

import <error descr="Option imports are not supported before edition 2024">option</error> "lang/annotation/import1.proto";

option <error descr="Features are not allowed before edition 2023">features</error>.enum_type = OPEN;

message Test {
  optional string labeled_field = 1;
  optional group LabeledGroup = 2 {}
  <error descr="Fields must have labels in proto2 (optional, required, or repeated)">string unlabeled_field = 3;</error>
  <error descr="Fields must have labels in proto2 (optional, required, or repeated)">group UnlabeledGroup = 4 {}</error>

  map<string, string> unlabeled_map = 5;
  <error descr="Map fields cannot have labels">optional</error> map<string, string> labeled_map = 6;

  oneof TestOneof {
    <error descr="Oneof fields cannot have labels">optional</error> string labeled_oneof_field = 11;
    <error descr="Oneof fields cannot have labels">optional</error> group LabeledOneofGroup = 12 {}
    string unlabeled_oneof_field = 13;
    group UnlabeledOneofGroup = 14 {}
  }
}

message GroupNotCapitalLetter {
  optional group Okay = 1 {}
  optional group <error descr="Group names must start with capital letter">notOkay</error> = 2 {}
  optional group <error descr="Group names must start with capital letter">_WithUnderscore</error> = 3 {}
}


<error descr="Symbol visibility is not allowed before edition 2024">export</error> message BannedExportMessage {
  optional int32 a = 1;

  <error descr="Symbol visibility is not allowed before edition 2024">export</error> message BannedExportNestedMessage {
    optional int32 a = 1;
  }

  <error descr="Symbol visibility is not allowed before edition 2024">local</error> message BannedLocalNestedMessage {
    optional int32 a = 1;
  }

  <error descr="Symbol visibility is not allowed before edition 2024">export</error> enum BannedExportNestedEnum {
    BANNED_EXPORT_NESTED_ENUM_UNKNOWN = 0;
  }

  <error descr="Symbol visibility is not allowed before edition 2024">local</error> enum BannedLocalNestedEnum {
    BANNED_LOCAL_NESTED_ENUM_UNKNOWN = 0;
  }
}

<error descr="Symbol visibility is not allowed before edition 2024">local</error> message BannedLocalMessage {
  optional int32 a = 1;
}

<error descr="Symbol visibility is not allowed before edition 2024">export</error> enum BannedExportEnum {
  BANNED_EXPORT_ENUM_UNKNOWN = 0;
}

<error descr="Symbol visibility is not allowed before edition 2024">local</error> enum BannedLocalEnum {
  BANNED_LOCAL_ENUM_UNKNOWN = 0;
}
